added a few things

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/style.css">
     <link href='https://css.gg/add.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <title>Portfolio</title>
 </head>
 <body>
@@ -13,10 +14,10 @@
 
         <div class="navbar">
             <ul>
-                <li>Sheikh Zubair</li>
-                <li class="skills">Skills</li>
-                <li class="about">Bio</li>
-                <li class="contact">Contact</li>
+                <li><a>Sheikh Zubair</a></li>
+                <li class="skills"><a href="skills.html">Skills</a></li>
+                <li class="about"><a>Bio</a></li>
+                <li class="contact"><a>Contact</a></li>
             </ul>
 
         </div>
@@ -30,16 +31,28 @@
 
         <div class="icons">
             <ul>
-                <li><a href="./ZubCv.pdf" target="_blank" ><ion-icon name="document-text-outline"  ></ion-icon></a></li>
+                <li><a href="CV_Sept.pdf" target="_blank" ><ion-icon name="document-text-outline"  ></ion-icon></a></li>
                 <li><a href="https://github.com/shakesbeer2049" target="_blank"><ion-icon name="logo-github"></ion-icon></a></li>
                 <li><a href="https://www.linkedin.com/in/sheikhzubair2049/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></li>
             </ul>
         </div>
-        <p class="arrow"><a href="" ><ion-icon name="arrow-down-outline"></ion-icon> </a></p>
+        <p class="arrow"><a href="#skills-section" ><ion-icon name="arrow-down-outline"></ion-icon> </a></p>
         <!-- <footer>
             made with html and css and javascript
         </footer> -->
+    </div>
+    <div id="skills-section">
+        <h2>Skills</h2>
+        <ul class="skills-list">
+            <li><i class="fab fa-html5"></i></li>
+            <li><i class="fab fa-css3-alt css-icon"></i></li>
+            <li><i class="fab fa-js-square js-icon"></i></li>
+            <li><i class="fab fa-react react-icon"></i></li>
+        </ul>
+    </div>
 
+    <div class="container2" id="section2">
+        <h1>Work in progress...</h1>
     </div>
 </body>
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
