--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="navbar">
             <ul>
                 <li><a>Sheikh Zubair</a></li>
-                <li class="skills"><a href="skills.html">Skills</a></li>
+                <li class="skills"><a href="#skills-section">Skills</a></li>
                 <li class="about"><a>Bio</a></li>
                 <li class="contact"><a>Contact</a></li>
             </ul>
