--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a>Sheikh Zubair</a></li>
                 <li class="skills"><a href="#skills-section">Skills</a></li>
-                <li class="about"><a>Bio</a></li>
+                <li class="about"><a href="#section2" >Bio</a></li>
                 <li class="contact"><a>Contact</a></li>
             </ul>
 
@@ -44,15 +44,17 @@
     <div id="skills-section">
         <h2>Skills</h2>
         <ul class="skills-list">
-            <li><i class="fab fa-html5"></i></li>
-            <li><i class="fab fa-css3-alt css-icon"></i></li>
-            <li><i class="fab fa-js-square js-icon"></i></li>
-            <li><i class="fab fa-react react-icon"></i></li>
+            <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML"><i class="fab fa-html5"></i></a></li>
+            <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS"><i class="fab fa-css3-alt css-icon"></i></a></li>
+            <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"><i class="fab fa-js-square js-icon"></i></a></li>
+            <li><a href="https://reactjs.org/"><i class="fab fa-react react-icon"></i></a></li>
+            <li><a href="https://nodejs.org/en/"><i class="fab fa-node node-icon"></i></a></li>
         </ul>
     </div>
-
     <div class="container2" id="section2">
-        <h1>Work in progress...</h1>
+        <h1>About me</h1>
+        <p>I’m a web developer. <br> I spend most of my time experimenting with HTML, CSS, and JavaScript. <br>
+            Graduated college in October 2021 with a CSE degree. </p>
     </div>
 </body>
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
