added notes project

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="overlay">
           <div class="overlay-text">
               <h3>Countries</h3>
-              <p>Shows the data of countries like population , flag , capital etc</p>
+              <p>Shows the data of countries like population , flag , capital etc (Reactjs)</p>
             
             </div>
         </div>
@@ -80,7 +80,7 @@
       /> <div class="overlay">
         <div class="overlay-text">
             <h3>Charitable</h3>
-            <p>Charity Web App</p>
+            <p>Charity Web App (Nodejs,ejs,Mongodb)</p>
           </div>
       </div>
     </a>
@@ -90,7 +90,7 @@
       /> <div class="overlay">
         <div class="overlay-text">
             <h3>WeatherJS</h3>
-            <p>Simple weather app</p>
+            <p>Simple weather app (Vanilla JS)</p>
           </div>
       </div>
     </a>
@@ -100,7 +100,7 @@
       /> <div class="overlay">
         <div class="overlay-text">
             <h3>Travel</h3>
-            <p>Tourism website landing page</p>
+            <p>Tourism website landing page (HTML/CSS/JS)</p>
           </div>
       </div>
     </a>
@@ -110,10 +110,20 @@
       /> <div class="overlay">
         <div class="overlay-text">
             <h3>To-do List</h3>
-            <p>A simple to-do list</p>
+            <p>A simple to-do list (HTML/CSS/JS/JQ)</p>
           </div>
       </div>
     </a>
+
+    <a class="item item6" href="https://github.com/shakesbeer2049/Notes-react"  target="_blank"
+    ><img src="./media/React-notes.png" alt="To-do"
+  /> <div class="overlay">
+    <div class="overlay-text">
+        <h3>Notes</h3>
+        <p>Notes App (Reactjs)</p>
+      </div>
+  </div>
+</a>
 
     </div>
     <div id="skills-section">
