--- a/index.html
+++ b/index.html
@@ -63,82 +63,40 @@
             made with html and css and javascript
         </footer> -->
     </div>
-    <h1>Projects</h1>
-    <div class="projects" id="project">
+    <h1 class="project-heading" id="project">Projects</h1>
+    <div class="projects" >
+
       <a
         class="item item1"
-        href="https://github.com/shakesbeer2049/Countries-Reactjs"
+        href="https://agitated-jackson-bd0314.netlify.app"
         target="_blank"
-      >
-        <img src="./media/cd.png" alt="Countries" />
+        ><img src="./media/weather-react.png" alt="Weather" />
         <div class="overlay">
           <div class="overlay-text">
-            <h3>Countries</h3>
-            <p>
-              Shows the data of countries like population , flag , capital etc
-              (Reactjs)
-            </p>
+            <h3>Weather</h3>
+            <p>Weather app developed in React</p>
           </div>
         </div>
       </a>
 
       <a
-        class="item item2"
-        href="https://github.com/shakesbeer2049/charitable"
-        target="_blank"
-        ><img src="./media/charitable.png" alt="Charitable" />
-        <div class="overlay">
-          <div class="overlay-text">
-            <h3>Charitable</h3>
-            <p>Charity Web App (Nodejs,ejs,Mongodb)</p>
-          </div>
+      class="item item2"
+      href="https://frozen-ravine-88935.herokuapp.com/"
+      target="_blank"
+      ><img src="./media/phonebook.png" alt="phonebook" />
+      <div class="overlay">
+        <div class="overlay-text">
+          <h3>Phonebook</h3>
+          <p>Phonebook (Reactjs)</p>
         </div>
-      </a>
+      </div>
+    </a>
 
       <a
         class="item item3"
-        href="https://github.com/shakesbeer2049/weather-js"
-        target="_blank"
-        ><img src="./media/weather.png" alt="Weather" />
-        <div class="overlay">
-          <div class="overlay-text">
-            <h3>WeatherJS</h3>
-            <p>Simple weather app (Vanilla JS)</p>
-          </div>
-        </div>
-      </a>
-
-      <a
-        class="item item4"
-        href="https://github.com/shakesbeer2049/tourismWebsite"
-        target="_blank"
-        ><img src="./media/travel.png" alt="Travel" />
-        <div class="overlay">
-          <div class="overlay-text">
-            <h3>Travel</h3>
-            <p>Tourism website landing page (HTML/CSS/JS)</p>
-          </div>
-        </div>
-      </a>
-
-      <a
-        class="item item5"
-        href="https://github.com/shakesbeer2049/toDoList"
-        target="_blank"
-        ><img src="./media/todo.png" alt="To-do" />
-        <div class="overlay">
-          <div class="overlay-text">
-            <h3>To-do List</h3>
-            <p>A simple to-do list (HTML/CSS/JS/JQ)</p>
-          </div>
-        </div>
-      </a>
-
-      <a
-        class="item item6"
         href="https://github.com/shakesbeer2049/Notes-react"
         target="_blank"
-        ><img src="./media/React-notes.png" alt="To-do" />
+        ><img src="./media/React-notes.png" alt="notes" />
         <div class="overlay">
           <div class="overlay-text">
             <h3>Notes</h3>
@@ -147,18 +105,37 @@
         </div>
       </a>
 
+     
+
       <a
-        class="item item7"
-        href="https://github.com/shakesbeer2049/charitable"
+        class="item item4"
+        href="https://clever-liskov-3961d6.netlify.app"
         target="_blank"
-        ><img src="./media/phonebook.png" alt="Charitable" />
+        ><img src="./media/covid-dashboard.png" alt="covid-dash" />
         <div class="overlay">
           <div class="overlay-text">
-            <h3>Phonebook</h3>
-            <p>Phonebook (Reactjs)</p>
+            <h3>Covid-19 Dashboard</h3>
+            <p>Shows Covid data of a country (React)</p>
           </div>
         </div>
       </a>
+
+      <a
+      class="item item5"
+      href="https://github.com/shakesbeer2049/Countries-Reactjs"
+      target="_blank"
+    >
+      <img src="./media/cd.png" alt="Countries" />
+      <div class="overlay">
+        <div class="overlay-text">
+          <h3>Countries</h3>
+          <p>
+            Shows the data of countries like population , flag , capital etc
+            (Reactjs)
+          </p>
+        </div>
+      </div>
+    </a>
     </div>
     <div id="skills-section">
       <h1>Skills</h1>
