--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
       <nav>
         <ul>
           <li class="skills"><a href="#skills-section">Skills</a></li>
-          <li class="about"><a href="#section2">Bio</a></li>
+          <li class="skills"><a href="#project">Projects</a></li>
+          <!-- <li class="about"><a href="#section2">Bio</a></li> -->
           <li class="resume">
             <a href="CV_Final.pdf" target="_blank">Resume</a>
           </li>
